# ROS2-6dof-arm-conveyor-object-sorting-system

./: README.md
dof_6_ws/install/: local_setup.sh  setup.sh
dof_6_ws/install/conveyorbelt_gazebo/share/conveyorbelt_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
dof_6_ws/install/conveyorbelt_msgs/share/conveyorbelt_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
dof_6_ws/install/moveit/share/moveit/: local_setup.sh  package.sh
dof_6_ws/install/ros2_conveyorbelt/share/ros2_conveyorbelt/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
dof_6_ws/install/ur5/lib/ur5/: cap  grip  gz  gz_ik  pnp  pose  prox  rviz  rviz_ik  scheduler
dof_6_ws/install/ur5/share/ur5/: package.sh  ur5_gazebo.launch.py  ur5_grip.urdf  ur5_rviz.launch.py  ur5_rviz_bot.urdf  ur5_rviz_bot_clean.urdf  ur5_world.launch.py
dof_6_ws/src/: Imp_commands.txt  README.md  commands.txt
dof_6_ws/src/conveyorbelt_gazebo/models/conveyor_belt/: model.sdf
dof_6_ws/src/conveyorbelt_gazebo/urdf/: box_1.urdf  box_2.urdf  box_3.urdf
dof_6_ws/src/conveyorbelt_gazebo/worlds/: conveyorbelt.world
dof_6_ws/src/moveit/: .setup_assistant  package.xml
dof_6_ws/src/moveit/config/: moveit_controllers.yaml  ros2_controllers.yaml  ur5.ros2_control.xacro  ur5.urdf.xacro
dof_6_ws/src/moveit/launch/: move_group.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
dof_6_ws/src/ur5/: CMakeLists.txt  package.xml  setup.py
dof_6_ws/src/ur5/config/: ur5_control.yaml
dof_6_ws/src/ur5/launch/: ur5_control.launch.py
dof_6_ws/src/ur5/ur5/: controller_fk.py  controller_gz.py  controller_rviz_ik.py  pick_place.py  pose_publisher.py
dof_6_ws/src/ur5/worlds/: conveyorbelt.world  final.world  world.world
(+45 files in other folders)
